# AI-Observability-Platform

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.go.md  README.md  README.nodejs.md  README.php.md  README.ruby.md  README.rust.md  docker-compose.yml  prd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  spec.md
.github/workflows/: ci.yml  spec-guard.yml
apps/web/: .gitignore  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.test.json
evals/: baseline.json  regression_dataset.jsonl  run_eval.py
examples/demo_agent/: README.md  agent.py  pyproject.toml  replay.py  test_smoke.py
examples/go/: ai_obs.go  go.mod
examples/nodejs/: ai_obs.js
examples/php/: ai_obs.php
examples/ruby/: ai_obs.rb
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
infra/: docker-compose.observability.yml  prometheus.yml
infra/nginx/: aiobs.conf.example
services/ingest-api/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
services/ingest-api/app/: auth.py  errors.py  health.py  main.py  metrics.py  observability.py  pii.py  pipeline.py  ratelimit.py  schemas.py  tracing.py  validators.py
services/ingest-api/app/persistence/: memory_bus.py  memory_store.py  protocols.py
services/ingest-api/app/persistence/clickhouse/: mirror.py
services/ingest-api/app/persistence/kafka/: bus.py
services/ingest-api/app/persistence/postgres/: store.py
services/ingest-api/app/receivers/: otlp.py  otlp_grpc.py  rest.py
services/ingest-api/observability/: alerts.yml  prometheus.yml
services/ingest-api/tests/: __init__.py  conftest.py  test_auth.py  test_errors.py  test_operational.py  test_pii.py  test_pipeline.py  test_postgres_store.py  test_rest_receiver.py  test_schemas.py  test_validators.py
services/judge/: pyproject.toml
services/query-api/: Dockerfile  pyproject.toml
services/query-api/app/: analytics.py  auth.py  main.py  schemas.py  trace_builder.py
services/query-api/app/db/: store.py
services/query-api/app/routers/: analytics.py  query.py
services/query-api/tests/: test_analytics.py  test_query_api.py  test_trace_builder.py
services/replay-engine/: Dockerfile  pyproject.toml
services/replay-engine/app/: auth.py  engine.py  main.py  mock.py  schemas.py  session.py
services/replay-engine/app/divergence/: __init__.py
services/replay-engine/app/sandbox/: __init__.py
services/replay-engine/app/store/: memory.py
services/replay-engine/tests/: test_api.py  test_divergence.py  test_engine.py  test_mock.py
specs/: 00-glossary.md  01-naming-conventions.md  02-event-schema.md  README.md
specs/agents/: graph-tracer-agent.md  ingest-agent.md  judge-agent.md  platform-agent.md  query-agent.md  replay-agent.md  ui-agent.md
(+69 files in other folders)
