[package]
name = "ai-obs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest  = { version = "0.12", features = ["blocking", "json"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
hmac     = "0.12"
sha2     = "0.10"
base64   = "0.22"
uuid     = { version = "1", features = ["v4"] }
chrono   = "0.4"

[lib]
name = "ai_obs"
path = "src/lib.rs"
