[project]
name = "ingest-api"
version = "0.1.0"
description = "AI Observability Platform — Ingest API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "redis>=5.0",
    "aiokafka>=0.11",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
observability = [
    "sentry-sdk[fastapi]>=2.10",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
